Salesforce Copilot Studio LWC/force-app/main/default/objects/Copilot_Interaction__c/Copilot_Interaction__c.object-meta.xml
<CustomObject>
    <label>Copilot Interaction</label>
    <pluralLabel>Copilot Interactions</pluralLabel>
    <nameField>
        <displayFormat>CI-{00000}</displayFormat>
        <label>Interaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Tracks every Copilot Studio agent interaction for deflection metrics and trend analysis.</description>
</CustomObject>