Salesforce Copilot Studio LWC/force-app/main/default/objects/Copilot_Interaction__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <description>Case created as a result of this interaction, if any.</description>
    <type>Lookup</type>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Copilot Interactions</relationshipLabel>
    <relationshipName>Copilot_Interactions</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>