Salesforce Copilot Studio LWC/force-app/main/default/objects/Copilot_Interaction__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <description>Surface point where the interaction occurred.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service Console</fullName>
            </value>
            <value>
                <fullName>Customer Portal</fullName>
            </value>
            <value>
                <fullName>Documentation Site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>