Salesforce Copilot Studio LWC/force-app/main/default/objects/Copilot_Interaction__c/fields/Conversation_Id__c.field-meta.xml
<CustomField>
    <fullName>Conversation_Id__c</fullName>
    <label>Conversation Id</label>
    <description>Direct Line conversation ID linking this interaction to the chat session.</description>
    <type>Text</type>
    <length>255</length>
    <externalId>true</externalId>
    <unique>true</unique>
</CustomField>