Salesforce Copilot Studio LWC/force-app/main/default/objects/Copilot_Interaction__c/fields/KB_Articles_Shown__c.field-meta.xml
<CustomField>
    <fullName>KB_Articles_Shown__c</fullName>
    <label>KB Articles Shown</label>
    <description>Number of knowledge articles presented to the user during self-service.</description>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>