Salesforce Copilot Studio LWC/force-app/main/default/objects/Copilot_Interaction__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <description>Severity classification assigned during triage.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sev 1 - Critical</fullName>
            </value>
            <value>
                <fullName>Sev 2 - High</fullName>
            </value>
            <value>
                <fullName>Sev 3 - Medium</fullName>
            </value>
            <value>
                <fullName>Sev 4 - Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>