Salesforce Copilot Studio LWC/force-app/main/default/objects/Copilot_Interaction__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <label>Summary</label>
    <description>Brief summary of the interaction and how it was resolved.</description>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>