Salesforce Copilot Studio LWC/force-app/main/default/objects/Copilot_Interaction__c/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <label>Topic</label>
    <description>Primary topic or category of the user's question.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>