Salesforce Copilot Studio LWC/force-app/main/default/objects/Copilot_Interaction__c/fields/User_Email__c.field-meta.xml
<CustomField>
    <fullName>User_Email__c</fullName>
    <label>User Email</label>
    <description>Email of the user who initiated the interaction.</description>
    <type>Email</type>
</CustomField>